--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -29,7 +29,7 @@
                 </p>   
                   
                 <p>  
-                    <input type="radio" name="movie" id="other" value="Other">  
+                    <input type="radio" name="movie" id="other" value="Something Else">  
                     <label for="other">Something Else </label>  
                 </p>  
                 <input type="submit" value="Vote" class="btn btn-success"/>  
