--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,32 +5,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-        <title>Realtime Poll</title>
+        <title>Realtime Snack Poll</title>
     </head>
     <body>
         <div class="container">  
-            <h1> Marvel Movies </h1>   
-            <p> Select your favorite Marvel Movie </p>     
+            <h1> Favorite Midnight Snack </h1>   
+            <p> Select your favorite snack </p>     
               
             <form id="opinion-form">  
                 <p>  
-                    <input type="radio" name="movie" id="avengers" value="The Avengers">  
-                    <label for="avengers">The Avengers</label>  
+                    <input type="radio" name="snack" id="cheese" value="Cheese">  
+                    <label for="cheese">Cheese</label>  
                 </p>  
                   
                 <p>  
-                    <input type="radio" name="movie" id="black-panther" value="Black Panther">  
-                    <label for="black-panther">Black Panther</label>  
+                    <input type="radio" name="snack" id="chips" value="Chips">  
+                    <label for="chips">Chips</label>  
                 </p>  
                   
                 <p>  
-                    <input type="radio" name="movie" id="captain-america" value="Captain America">  
-                    <label for="captain-america">Captain America</label>  
+                    <input type="radio" name="snack" id="chocolate" value="Chocolate">  
+                    <label for="chocolate">Chocolate</label>  
                 </p>   
                   
                 <p>  
-                    <input type="radio" name="movie" id="other" value="Something Else">  
-                    <label for="other">Something Else </label>  
+                    <input type="radio" name="snack" id="other" value="Something Else">  
+                    <label for="other">Something Else</label>  
                 </p>  
                 <input type="submit" value="Vote" class="btn btn-success"/>  
             </form>  
@@ -39,7 +39,7 @@
             <div id="chart-container" style="height:300px;width:100%;">  
         
             </div>  
-        </div>  
+        </div> 
         <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>  
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>  
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.17.1/axios.js"></script>  
